# localstack-demo

./: .gitignore  README.md  pyproject.toml
localstack-jupyter/: s3_test.ipynb
localstack-python/: s3_test.py
localstack-terraform/: main.tf
